# sphinx-rust

./: README.md  changelog.md  pyproject.toml
doc/: conf.py
src/sphinxrust/: rustdomain.py
