[tool.poetry]
name = "sphinx-rust"
version = "0.1.1"
description = "Sphinx extension for documenting Rust projects"
authors = ["Stefan Ulbrich <6009224+StefanUlbrich@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/StefanUlbrich/sphinx-rust"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 1 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "sphinxrust", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^7.2.6"
docutils = "^0.20.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
types-docutils = "0.20.0.20240201"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.mypy]
# python_version = "3.11"
# warn_unused_configs = true
# namespace_packages = true
# mypy_path = "src"
# show_error_codes = true
# strict = true